--- a/m/css/login.css
+++ b/m/css/login.css
@@ -54,7 +54,7 @@ main {
 
 #login .login-box {
     width: 95%;
-    height: 40%;
+    height: 250px;
     border: 2px solid black;
     display: flex;
     flex-direction: column;
@@ -92,7 +92,7 @@ main {
     align-items: center;
     vertical-align: middle;
     width: 100%;
-    height: 30%;
+    height: 100px;
 }
 
 
