--- a/m/css/login.css
+++ b/m/css/login.css
@@ -67,7 +67,7 @@ main {
 
 #login .submit {
     width: 95%;
-    height: 10%;
+    height: 50px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -97,9 +97,7 @@ main {
 
 
 #login .login-box .login-label .logo-box img {
-
-    display: block;
-    
+    display: block;   
 }
 
 #login .login-box .login-form {
