--- a/m/css/style.css
+++ b/m/css/style.css
@@ -29,9 +29,7 @@ main {
 
 #app {
     margin: 0 auto;
-    max-width: 100vw;
-    height: 100vh;
-    background-color: #e5e5e5
+    background-color: #e5e5e5;
 }
 
 /* custom rules */
@@ -99,9 +97,11 @@ main {
 }
 
 #top {
+    position: fixed;
+    top:0;
+    z-index: 2;
     width: 100%;
-    height: 6%;
-    min-height: 50px;
+    height: 50px;
     background-color: black;
 }
 
@@ -111,11 +111,12 @@ main {
     width: 100%;
     height: auto;
     background-color: #e5e5e5;
+    margin: 50px 0;
 }
 
 #footer {
     width: 100%;
-    background-color: #555;
+    background-color: black;
 }
 
 
@@ -215,7 +216,7 @@ main {
 }
 
 #top .logo-top img {
-    width: 40%;
+    width: 30px;
     border-radius: 50%;
 
 }
@@ -584,7 +585,7 @@ main .main-body .main-center .title-box.effect-box .effect > div:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 50px;
+    height: 50px;
     color: white;
 }
 #footer footer .footer-box span,
