--- a/m/css/event-box.css
+++ b/m/css/event-box.css
@@ -11,7 +11,7 @@ main .main-body .main-center .event-box {
 
 main .main-body .main-center .event-box .event-header {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-direction: row;
     align-items: center;
     width: 100%;
@@ -24,7 +24,6 @@ main .main-body .main-center .event-box .event-header .event-header-box {
     justify-content: flex-start;
     flex-direction: row;
     align-items: center;
-    width: 50%;
     font-size: 0.8rem;
 }
 
@@ -34,7 +33,6 @@ main .main-body .main-center .event-box .event-header .mod-box {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    width: 50%;
     height: 100%;
 }
 
