--- a/m/css/chart-box.css
+++ b/m/css/chart-box.css
@@ -1,14 +1,9 @@
 main .main-body .main-center .chart-box {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     flex-wrap: nowrap;
     width: 100%;
-    height: 73vh;
-}
-
-main .main-body .main-center .chart-box.index{
-    height: 36vh !important;
 }
 
 main .main-body .main-center .chart-box .element-box {
@@ -17,7 +12,7 @@ main .main-body .main-center .chart-box .element-box {
     justify-content: flex-start;
     flex-wrap: nowrap;
     margin-bottom: 30px;
-    width: 30%;
+    width: 100%;
 }
 
 main .main-body .main-center .chart-box .table-box {
@@ -84,14 +79,12 @@ main .main-body .main-center .chart-box .table-box .order-table tbody tr.channel
 
 main .main-body .main-center .chart-box .element-box .chart-element {
     padding: 0 20px 20px 20px;
-    width: 450px;
-    height: 300px;    
+    width: 100%;
 }
 
 main .main-body .main-center .chart-box .chart-element {
     padding: 0 20px 20px 20px;
-    width: 500px;
-    height: 300px;
+    width: 100%;
 }
 
 main .main-body .main-center .chart-box .chart-element .caption {
