--- a/m/css/chart-box.css
+++ b/m/css/chart-box.css
@@ -80,6 +80,7 @@ main .main-body .main-center .chart-box .table-box .order-table tbody tr.channel
 main .main-body .main-center .chart-box .element-box .chart-element {
     padding: 0 20px 20px 20px;
     width: 100%;
+    height: 300px;
 }
 
 main .main-body .main-center .chart-box .chart-element {
