--- a/m/css/chart-box.css
+++ b/m/css/chart-box.css
@@ -77,16 +77,12 @@ main .main-body .main-center .chart-box .table-box .order-table tbody tr.channel
     background-color: lightyellow;
 }
 
-main .main-body .main-center .chart-box .element-box .chart-element {
+main .main-body .main-center .chart-box .chart-element {
     position: relative;
     padding: 0 20px 20px 20px;
     width: 95vw;
-    height: 50vh;
-}
-
-main .main-body .main-center .chart-box .chart-element {
-    padding: 0 20px 20px 20px;
-    width: 100%;
+    height: 350px;
+    margin-bottom: 50px;
 }
 
 main .main-body .main-center .chart-box .chart-element .caption {
